--- a/src/main/resources/templates/product-table.html
+++ b/src/main/resources/templates/product-table.html
@@ -89,14 +89,12 @@
                     <thead>
                     <tr>
                         <th class="table-check"><input type="checkbox" onclick="checkAll(this)"/></th>
-                        <th class="table-id" width="12%">No.</th>
+                        <th class="table-set" width="10%">No.</th>
                         <th class="table-title" width="15%">Item ID</th>
-                        <!--<th class="table-type">series</th>-->
                         <th class="table-author" width="15%">OEM Code</th>
                         <th class="table-date" width="6%">Color</th>
                         <th class="table-set" width="19%">Suitable Machine</th>
                         <th class="table-set" width="10%">Page Yield</th>
-                        <!--<th class="table-set">itemtype</th>-->
                         <th class="table-set" width="15%">操作</th>
                     </tr>
                     </thead>
