--- a/src/main/resources/templates/news-add.html
+++ b/src/main/resources/templates/news-add.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>新闻编辑</title>
-    <link rel="icon" type="image/png" href="/i/favicon.png"/>
-    <link rel="apple-touch-icon-precomposed" href="/i/app-icon72x72@2x.png"/>
-    <link rel="stylesheet" href="/css/amazeui.min.css"/>
-    <link rel="stylesheet" href="/css/admin.css"/>
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/js/datetimepicker/bootstrap-datetimepicker.min.css">
+    <link rel="icon" type="image/png" th:href="@{/i/favicon.png}"/>
+    <link rel="stylesheet" th:href="@{/css/amazeui.min.css}"/>
+    <link rel="stylesheet" th:href="@{/css/admin.css}"/>
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{/js/datetimepicker/bootstrap-datetimepicker.min.css}">
 </head>
 <body>
 <div class="am-cf admin-main">
@@ -75,19 +74,19 @@
 <![endif]-->
 
 <!--[if (gte IE 9)|!(IE)]><!-->
-<script src="/js/jquery.min.js"></script>
-<script src="/js/amazeui.min.js"></script>
+<script th:src="@{/js/jquery.min.js}"></script>
+<script th:src="@{/js/amazeui.min.js}"></script>
 <!--<![endif]-->
-<script src="/js/app.js"></script>
-<script src="/js/datetimepicker/bootstrap-datetimepicker.min.js"></script>
-<script src="/js/bootstrap.min.js"></script>
-<script src="/js/news.js"></script>
+<script th:src="@{/js/app.js}"></script>
+<script th:src="@{/js/datetimepicker/bootstrap-datetimepicker.min.js}"></script>
+<script th:src="@{/js/bootstrap.min.js}"></script>
+<script th:src="@{/js/news.js}"></script>
 
-<script type="text/javascript" charset="utf-8" src="/ueditor/ueditor.config.js"></script>
-<script type="text/javascript" charset="utf-8" src="/ueditor/ueditor.all.min.js"> </script>
+<script type="text/javascript" charset="utf-8" th:src="@{/ueditor/ueditor.config.js}"></script>
+<script type="text/javascript" charset="utf-8" th:src="@{/ueditor/ueditor.all.min.js}"> </script>
 <!--建议手动加在语言，避免在ie下有时因为加载语言失败导致编辑器加载失败-->
 <!--这里加载的语言文件会覆盖你在配置项目里添加的语言类型，比如你在配置项目里配置的是英文，这里加载的中文，那最后就是中文-->
-<script type="text/javascript" charset="utf-8" src="/ueditor/lang/zh-cn/zh-cn.js"></script>
+<script type="text/javascript" charset="utf-8" src="@{/ueditor/lang/zh-cn/zh-cn.js"></script>
 <script type="text/javascript" th:inline="javascript">
     var content = [[${data.content}]];
 
