--- a/src/main/resources/templates/news-table.html
+++ b/src/main/resources/templates/news-table.html
@@ -12,10 +12,10 @@
     <link rel="icon" type="image/png" href="/i/favicon.png">
     <link rel="apple-touch-icon-precomposed" href="/i/app-icon72x72@2x.png">
     <meta name="apple-mobile-web-app-title" content="Amaze UI" />
-    <link rel="stylesheet" href="/css/amazeui.min.css"/>
-    <link rel="stylesheet" href="/css/admin.css">
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/js/datetimepicker/bootstrap-datetimepicker.min.css">
+    <link rel="stylesheet" th:href="@{/css/amazeui.min.css}"/>
+    <link rel="stylesheet" th:href="@{/css/admin.css}">
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{/js/datetimepicker/bootstrap-datetimepicker.min.css}">
 </head>
 <body>
 <!--[if lte IE 9]>
@@ -127,19 +127,19 @@
 <!--[if lt IE 9]>
 <script src="http://libs.baidu.com/jquery/1.11.1/jquery.min.js"></script>
 <script src="http://cdn.staticfile.org/modernizr/2.8.3/modernizr.js"></script>
-<script src="/js/polyfill/rem.min.js"></script>
-<script src="/js/polyfill/respond.min.js"></script>
-<script src="/js/amazeui.legacy.js"></script>
+<script th:src="@{/js/polyfill/rem.min.js}"></script>
+<script th:src="@{/js/polyfill/respond.min.js}"></script>
+<script th:src="@{/js/amazeui.legacy.js}"></script>
 <![endif]-->
 
 <!--[if (gte IE 9)|!(IE)]><!-->
-<script src="/js/jquery-1.8.3.min.js"></script>
-<script src="/js/amazeui.min.js"></script>
+<script th:src="@{/js/jquery-1.8.3.min.js}"></script>
+<script th:src="@{/js/amazeui.min.js}"></script>
 <!--<![endif]-->
-<script src="/js/app.js"></script>
-<script src="/js/datetimepicker/bootstrap-datetimepicker.min.js"></script>
-<script src="/js/bootstrap.min.js"></script>
-<script src="/js/news.js"></script>
+<script th:src="@{/js/app.js}"></script>
+<script th:src="@{/js/datetimepicker/bootstrap-datetimepicker.min.js}"></script>
+<script th:src="@{/js/bootstrap.min.js}"></script>
+<script th:src="@{/js/news.js}"></script>
 
 </body>
 </html>
