--- a/src/main/resources/templates/product-table.html
+++ b/src/main/resources/templates/product-table.html
@@ -9,11 +9,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="renderer" content="webkit">
     <meta http-equiv="Cache-Control" content="no-siteapp"/>
-    <link rel="icon" type="image/png" href="/i/favicon.png">
-    <link rel="apple-touch-icon-precomposed" href="/i/app-icon72x72@2x.png">
-    <meta name="apple-mobile-web-app-title" content="Amaze UI"/>
-    <link rel="stylesheet" href="/css/amazeui.min.css"/>
-    <link rel="stylesheet" href="/css/admin.css">
+    <link rel="icon" type="image/png" th:href="@{/i/favicon.png}">
+    <meta name="apple-mobile-web-app-title" content="Amaze UI" />
+    <link rel="stylesheet" th:href="@{/css/amazeui.min.css}"/>
+    <link rel="stylesheet" th:href="@{/css/admin.css}">
 </head>
 <body>
 <!--[if lte IE 9]>
@@ -133,16 +132,16 @@
 <!--[if lt IE 9]>
 <script src="http://libs.baidu.com/jquery/1.11.1/jquery.min.js"></script>
 <script src="http://cdn.staticfile.org/modernizr/2.8.3/modernizr.js"></script>
-<script src="/js/polyfill/rem.min.js"></script>
-<script src="/js/polyfill/respond.min.js"></script>
-<script src="/js/amazeui.legacy.js"></script>
+<script th:src="@{/js/polyfill/rem.min.js}"></script>
+<script th:src="@{/js/polyfill/respond.min.js}"></script>
+<script th:src="@{/js/amazeui.legacy.js}"></script>
 <![endif]-->
 
 <!--[if (gte IE 9)|!(IE)]><!-->
-<script src="/js/jquery.min.js"></script>
-<script src="/js/amazeui.min.js"></script>
+<script th:src="@{/js/jquery.min.js}"></script>
+<script th:src="@{/js/amazeui.min.js}"></script>
 <!--<![endif]-->
-<script src="/js/app.js"></script>
-<script src="/js/product.js"></script>
+<script th:src="@{/js/app.js}"></script>
+<script th:src="@{/js/product.js}"></script>
 </body>
 </html>
